tests/baselines/reference/chainedAssignmentChecking.errors.txt
tests/cases/compiler/chainedAssignmentChecking.ts(21,1): error TS2737: Property 'a' is missing in type 'Z' but present in type 'X'.
tests/cases/compiler/chainedAssignmentChecking.ts(21,6): error TS2735: Type 'Z' is missing the following properties from type 'Y': a, b


==== tests/cases/compiler/chainedAssignmentChecking.ts (2 errors) ====
    class X {
      constructor(public z) { }
      a: number;
    }
    
    class Y {
      constructor(public z) { }
      a: number;
      b: string;
    }
    
    class Z {
      z: any;
      c: string;
    }
    
    var c1 = new X(3);
    var c2 = new Y(5);
    var c3 = new Z();
    
    c1 = c2 = c3; // Should be error
    ~~
!!! error TS2737: Property 'a' is missing in type 'Z' but present in type 'X'.
         ~~
!!! error TS2735: Type 'Z' is missing the following properties from type 'Y': a, b
    